tests/core/snapshots/grpc-reflection.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
snapshot_kind: text
---
type News {
  body: String!
  id: Int!
  postImage: String!
  status: Status!
  title: String!
}

type NewsData {
  news: [News]
}

type Query {
  news: NewsData!
}

enum Status {
  DELETED
  DRAFT
  PUBLISHED
}

schema {
  query: Query
}
