tests/core/snapshots/grpc-reflection.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema
  @server(port: 8000)
  @upstream(httpCache: 42)
  @link(src: "http://localhost:50051", type: Grpc)
  @link(src: "schema_0.graphql", type: Config) {
  query: Query
}

enum Status {
  DELETED
  DRAFT
  PUBLISHED
}

type News {
  body: String!
  id: Int!
  postImage: String!
  status: Status!
  title: String!
}

type NewsData {
  news: [News]
}

type Query {
  news: NewsData! @grpc(url: "http://localhost:50051", method: "news.NewsService.GetAllNews")
}
