tests/core/snapshots/nested-recursive-types.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server(queryDepth: 0) @upstream @link(src: "schema_0.graphql", type: Config) {
  query: Query
  mutation: Mutation
}

input ConnectionInput {
  nested: NestedUserInput
  type: String
}

input NestedUserInput {
  user: UserInput
}

input UserInput {
  connections: [ConnectionInput] @http(url: "http://jsonplaceholder.typicode.com/connections/{{.value.id}}")
  id: Int!
  name: String
}

type Connection {
  nested: NestedUser
  type: String
}

type Mutation {
  createUser(user: UserInput): User
    @http(url: "http://jsonplaceholder.typicode.com/user", body: "{{.args.user}}", method: "POST")
}

type NestedUser {
  user: User
}

type Query {
  user: User @http(url: "http://jsonplaceholder.typicode.com/users/1")
}

type User {
  connections: [Connection] @http(url: "http://jsonplaceholder.typicode.com/connections/{{.value.id}}")
  id: Int!
  name: String
}
