tests/core/snapshots/query-depth-limit.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user": {
        "posts": [
          {
            "id": 1
          }
        ]
      }
    }
  }
}
