tests/core/snapshots/query-depth-limit.md_1.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "Build error: Query depth 4 exceeds the limit of 3",
        "locations": [
          {
            "line": 0,
            "column": 0
          }
        ]
      }
    ]
  }
}
